--- a/date/2025-08/index.htm
+++ b/date/2025-08/index.htm
@@ -272,16 +272,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-8-6-node-share-links.htm" title="VPN安卓 | 8月6日20.4M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR免费节点订阅分享">VPN安卓 | 8月6日20.4M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-12-top-vpn-node.htm" title="VPN安卓 | 8月12日20.5M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray免费节点订阅分享">VPN安卓 | 8月12日20.5M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-10-top-vpn.htm" title="VPN安卓 | 8月10日18.9M/S|免费SSR/Shadowrocket节点/Clash节点/V2ray免费节点订阅分享">VPN安卓 | 8月10日18.9M/S|免费SSR/Shadowrocket节点/Clash节点/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-22-free-vpn-node.htm" title="VPN设备 | 9月22日20.3M/S|免费VPN/SSR/Shadowrocket节点/Clash节点/V2ray免费节点订阅分享">VPN设备 | 9月22日20.3M/S|免费VPN/SSR/Shadowrocket节点/Clash节点/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-5-share-vpn.htm" title="VPN安卓 | 8月5日22.4M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR免费节点订阅分享">VPN安卓 | 8月5日22.4M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-18-vpn-node.htm" title="VPN设备 | 9月18日22.5M/S|免费VPN/SSR/Clash节点/Shadowrocket节点/V2ray免费节点订阅分享">VPN设备 | 9月18日22.5M/S|免费VPN/SSR/Clash节点/Shadowrocket节点/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-27-share-vpn.htm" title="VPN设备 | 8月27日22M/S|免费VPN/SSR/V2ray节点/Shadowrocket节点/Clash免费节点订阅分享">VPN设备 | 8月27日22M/S|免费VPN/SSR/V2ray节点/Shadowrocket节点/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-18-share-vpn.htm" title="VPN安卓 | 8月18日19.6M/S|免费V2ray节点/Shadowrocket节点/SSR/Clash免费节点订阅分享">VPN安卓 | 8月18日19.6M/S|免费V2ray节点/Shadowrocket节点/SSR/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-28-node-share.htm" title="VPN设备 | 8月28日19.4M/S|免费VPN/Shadowrocket节点/Clash节点/SSR/V2ray免费节点订阅分享">VPN设备 | 8月28日19.4M/S|免费VPN/Shadowrocket节点/Clash节点/SSR/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-14-vpn-free.htm" title="VPN安卓 | 8月14日22.9M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray免费节点订阅分享">VPN安卓 | 8月14日22.9M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-20-share-vpn.htm" title="VPN安卓 | 8月20日19.8M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR免费节点订阅分享">VPN安卓 | 8月20日19.8M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-1-free-vpn.htm" title="VPN设备 | 9月1日21.4M/S|免费VPN/Clash节点/SSR/V2ray节点/Shadowrocket免费节点订阅分享">VPN设备 | 9月1日21.4M/S|免费VPN/Clash节点/SSR/V2ray节点/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-24-free-vpn.htm" title="VPN设备 | 8月24日22M/S|免费VPN/Shadowrocket节点/V2ray节点/Clash节点/SSR免费节点订阅分享">VPN设备 | 8月24日22M/S|免费VPN/Shadowrocket节点/V2ray节点/Clash节点/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-21-vpn-proxy.htm" title="VPN设备 | 9月21日22.1M/S|免费VPN/Clash节点/SSR/V2ray节点/Shadowrocket免费节点订阅分享">VPN设备 | 9月21日22.1M/S|免费VPN/Clash节点/SSR/V2ray节点/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-16-vpn-node.htm" title="VPN安卓 | 8月16日18.3M/S|免费V2ray节点/SSR/Clash节点/Shadowrocket免费节点订阅分享">VPN安卓 | 8月16日18.3M/S|免费V2ray节点/SSR/Clash节点/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-21-vpn-proxy.htm" title="VPN安卓 | 8月21日21.9M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray免费节点订阅分享">VPN安卓 | 8月21日21.9M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-26-node-share.htm" title="VPN设备 | 8月26日18.9M/S|免费VPN/Shadowrocket节点/V2ray节点/Clash节点/SSR免费节点订阅分享">VPN设备 | 8月26日18.9M/S|免费VPN/Shadowrocket节点/V2ray节点/Clash节点/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-19-free-vpn-node.htm" title="VPN安卓 | 8月19日21.8M/S|免费Shadowrocket节点/Clash节点/V2ray节点/SSR免费节点订阅分享">VPN安卓 | 8月19日21.8M/S|免费Shadowrocket节点/Clash节点/V2ray节点/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-10-vpn-proxy.htm" title="VPN设备 | 9月10日20M/S|免费VPN/SSR/Shadowrocket节点/Clash节点/V2ray免费节点订阅分享">VPN设备 | 9月10日20M/S|免费VPN/SSR/Shadowrocket节点/Clash节点/V2ray免费节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -293,7 +293,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
