--- a/date/2025-09/page-3.htm
+++ b/date/2025-09/page-3.htm
@@ -112,6 +112,66 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-08">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-8-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 9月8日22.1M/S|免费VPN/Shadowrocket节点/Clash节点/V2ray节点/SSR免费节点订阅分享" src="/uploads/20241222-1/35f2ca1dcee5e084eaf1ccbd9a4339cc.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-8-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 9月8日22.1M/S|免费VPN/Shadowrocket节点/Clash节点/V2ray节点/SSR免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了美国、香港、日本、韩国、新加坡、加拿大、欧洲等地区,最高速度可达22.1 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-07">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-7-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 9月7日21.3M/S|免费VPN/Shadowrocket节点/V2ray节点/SSR/Clash免费节点订阅分享" src="/uploads/20241222-1/9e2b225d869222c8f450f1935366fea1.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-7-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 9月7日21.3M/S|免费VPN/Shadowrocket节点/V2ray节点/SSR/Clash免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了香港、欧洲、韩国、新加坡、日本、美国、加拿大等地区,最高速度可达21.3 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-06">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-6-top-vpn-node.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 9月6日20.4M/S|免费VPN/Clash节点/Shadowrocket节点/V2ray节点/SSR免费节点订阅分享" src="/uploads/20241222-1/82977253972095a20fc67c366bb8fa6d.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-6-top-vpn-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 9月6日20.4M/S|免费VPN/Clash节点/Shadowrocket节点/V2ray节点/SSR免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了香港、美国、加拿大、日本、欧洲、韩国、新加坡等地区,最高速度可达20.4 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-05">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-5-share-vpn.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 9月5日22.6M/S|免费VPN/SSR/Clash节点/Shadowrocket节点/V2ray免费节点订阅分享" src="/uploads/20241222-1/becabf2a83a60c5b8ca26e178386a903.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-5-share-vpn.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 9月5日22.6M/S|免费VPN/SSR/Clash节点/Shadowrocket节点/V2ray免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、美国、新加坡、香港、日本、韩国、欧洲等地区,最高速度可达22.6 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-09-04">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-9-4-free-vpn-node.htm" class="xcblog-blog-url">
@@ -182,16 +242,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-9-5-share-vpn.htm" title="VPN设备 | 9月5日22.6M/S|免费VPN/SSR/Clash节点/Shadowrocket节点/V2ray免费节点订阅分享">VPN设备 | 9月5日22.6M/S|免费VPN/SSR/Clash节点/Shadowrocket节点/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-2-top-vpn-node.htm" title="VPN设备 | 9月2日20.1M/S|免费VPN/V2ray节点/Shadowrocket节点/Clash节点/SSR免费节点订阅分享">VPN设备 | 9月2日20.1M/S|免费VPN/V2ray节点/Shadowrocket节点/Clash节点/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-12-top-vpn.htm" title="VPN设备 | 9月12日22.9M/S|免费VPN/Clash节点/SSR/V2ray节点/Shadowrocket免费节点订阅分享">VPN设备 | 9月12日22.9M/S|免费VPN/Clash节点/SSR/V2ray节点/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-4-vpn-proxy.htm" title="VPN安卓 | 8月4日19.1M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray免费节点订阅分享">VPN安卓 | 8月4日19.1M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-8-vpn-free.htm" title="VPN安卓 | 8月8日22.7M/S|免费Shadowrocket节点/V2ray节点/SSR/Clash免费节点订阅分享">VPN安卓 | 8月8日22.7M/S|免费Shadowrocket节点/V2ray节点/SSR/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-13-vpn-free.htm" title="VPN安卓 | 8月13日19.6M/S|免费SSR/V2ray节点/Clash节点/Shadowrocket免费节点订阅分享">VPN安卓 | 8月13日19.6M/S|免费SSR/V2ray节点/Clash节点/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-14-vpn-free.htm" title="VPN安卓 | 8月14日22.9M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray免费节点订阅分享">VPN安卓 | 8月14日22.9M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-16-vpn-node.htm" title="VPN安卓 | 8月16日18.3M/S|免费V2ray节点/SSR/Clash节点/Shadowrocket免费节点订阅分享">VPN安卓 | 8月16日18.3M/S|免费V2ray节点/SSR/Clash节点/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-20-vpn-proxy.htm" title="VPN设备 | 9月20日22M/S|免费VPN/SSR/V2ray节点/Clash节点/Shadowrocket免费节点订阅分享">VPN设备 | 9月20日22M/S|免费VPN/SSR/V2ray节点/Clash节点/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-15-node-share-links.htm" title="VPN安卓 | 8月15日21.7M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray免费节点订阅分享">VPN安卓 | 8月15日21.7M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-1-free-vpn.htm" title="VPN设备 | 9月1日21.4M/S|免费VPN/Clash节点/SSR/V2ray节点/Shadowrocket免费节点订阅分享">VPN设备 | 9月1日21.4M/S|免费VPN/Clash节点/SSR/V2ray节点/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-6-node-share-links.htm" title="VPN安卓 | 8月6日20.4M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR免费节点订阅分享">VPN安卓 | 8月6日20.4M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-12-top-vpn-node.htm" title="VPN安卓 | 8月12日20.5M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray免费节点订阅分享">VPN安卓 | 8月12日20.5M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-9-free-vpn-node.htm" title="VPN安卓 | 8月9日21.3M/S|免费Shadowrocket节点/Clash节点/V2ray节点/SSR免费节点订阅分享">VPN安卓 | 8月9日21.3M/S|免费Shadowrocket节点/Clash节点/V2ray节点/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-19-free-vpn-node.htm" title="VPN设备 | 9月19日22.4M/S|免费VPN/V2ray节点/SSR/Shadowrocket节点/Clash免费节点订阅分享">VPN设备 | 9月19日22.4M/S|免费VPN/V2ray节点/SSR/Shadowrocket节点/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-13-vpn-github.htm" title="VPN设备 | 9月13日19.4M/S|免费VPN/SSR/V2ray节点/Shadowrocket节点/Clash免费节点订阅分享">VPN设备 | 9月13日19.4M/S|免费VPN/SSR/V2ray节点/Shadowrocket节点/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-29-free-vpn.htm" title="VPN设备 | 8月29日18.4M/S|免费VPN/SSR/Shadowrocket节点/V2ray节点/Clash免费节点订阅分享">VPN设备 | 8月29日18.4M/S|免费VPN/SSR/Shadowrocket节点/V2ray节点/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-16-vpn-node.htm" title="VPN安卓 | 8月16日18.3M/S|免费V2ray节点/SSR/Clash节点/Shadowrocket免费节点订阅分享">VPN安卓 | 8月16日18.3M/S|免费V2ray节点/SSR/Clash节点/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-6-top-vpn-node.htm" title="VPN设备 | 9月6日20.4M/S|免费VPN/Clash节点/Shadowrocket节点/V2ray节点/SSR免费节点订阅分享">VPN设备 | 9月6日20.4M/S|免费VPN/Clash节点/Shadowrocket节点/V2ray节点/SSR免费节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -203,7 +263,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
