--- a/disclaimer.htm
+++ b/disclaimer.htm
@@ -140,16 +140,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-8-19-free-vpn-node.htm" title="VPN安卓 | 8月19日21.8M/S|免费Shadowrocket节点/Clash节点/V2ray节点/SSR免费节点订阅分享">VPN安卓 | 8月19日21.8M/S|免费Shadowrocket节点/Clash节点/V2ray节点/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-22-vpn-github.htm" title="VPN设备 | 8月22日19.7M/S|免费VPN/V2ray节点/SSR/Clash节点/Shadowrocket免费节点订阅分享">VPN设备 | 8月22日19.7M/S|免费VPN/V2ray节点/SSR/Clash节点/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-13-vpn-free.htm" title="VPN安卓 | 8月13日19.6M/S|免费SSR/V2ray节点/Clash节点/Shadowrocket免费节点订阅分享">VPN安卓 | 8月13日19.6M/S|免费SSR/V2ray节点/Clash节点/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-5-share-vpn.htm" title="VPN设备 | 9月5日22.6M/S|免费VPN/SSR/Clash节点/Shadowrocket节点/V2ray免费节点订阅分享">VPN设备 | 9月5日22.6M/S|免费VPN/SSR/Clash节点/Shadowrocket节点/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-19-free-vpn-node.htm" title="VPN设备 | 9月19日22.4M/S|免费VPN/V2ray节点/SSR/Shadowrocket节点/Clash免费节点订阅分享">VPN设备 | 9月19日22.4M/S|免费VPN/V2ray节点/SSR/Shadowrocket节点/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-15-free-vpn-node.htm" title="VPN设备 | 9月15日18.2M/S|免费VPN/SSR/Clash节点/V2ray节点/Shadowrocket免费节点订阅分享">VPN设备 | 9月15日18.2M/S|免费VPN/SSR/Clash节点/V2ray节点/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-9-free-vpn-node.htm" title="VPN安卓 | 8月9日21.3M/S|免费Shadowrocket节点/Clash节点/V2ray节点/SSR免费节点订阅分享">VPN安卓 | 8月9日21.3M/S|免费Shadowrocket节点/Clash节点/V2ray节点/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-6-top-vpn-node.htm" title="VPN设备 | 9月6日20.4M/S|免费VPN/Clash节点/Shadowrocket节点/V2ray节点/SSR免费节点订阅分享">VPN设备 | 9月6日20.4M/S|免费VPN/Clash节点/Shadowrocket节点/V2ray节点/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-4-free-vpn-node.htm" title="VPN设备 | 9月4日20.8M/S|免费VPN/V2ray节点/Clash节点/Shadowrocket节点/SSR免费节点订阅分享">VPN设备 | 9月4日20.8M/S|免费VPN/V2ray节点/Clash节点/Shadowrocket节点/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-27-share-vpn.htm" title="VPN设备 | 8月27日22M/S|免费VPN/SSR/V2ray节点/Shadowrocket节点/Clash免费节点订阅分享">VPN设备 | 8月27日22M/S|免费VPN/SSR/V2ray节点/Shadowrocket节点/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-4-vpn-proxy.htm" title="VPN安卓 | 8月4日19.1M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray免费节点订阅分享">VPN安卓 | 8月4日19.1M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-24-node-share-links.htm" title="VPN设备 | 9月24日20.2M/S|免费VPN/Shadowrocket节点/Clash节点/V2ray节点/Singbox节点/SSR节点免费节点订阅分享">VPN设备 | 9月24日20.2M/S|免费VPN/Shadowrocket节点/Clash节点/V2ray节点/Singbox节点/SSR节点免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-2-top-vpn-node.htm" title="VPN设备 | 9月2日20.1M/S|免费VPN/V2ray节点/Shadowrocket节点/Clash节点/SSR免费节点订阅分享">VPN设备 | 9月2日20.1M/S|免费VPN/V2ray节点/Shadowrocket节点/Clash节点/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-12-top-vpn.htm" title="VPN设备 | 9月12日22.9M/S|免费VPN/Clash节点/SSR/V2ray节点/Shadowrocket免费节点订阅分享">VPN设备 | 9月12日22.9M/S|免费VPN/Clash节点/SSR/V2ray节点/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-11-free-vpn.htm" title="VPN安卓 | 8月11日18.2M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR免费节点订阅分享">VPN安卓 | 8月11日18.2M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-6-node-share-links.htm" title="VPN安卓 | 8月6日20.4M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR免费节点订阅分享">VPN安卓 | 8月6日20.4M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-18-share-vpn.htm" title="VPN安卓 | 8月18日19.6M/S|免费V2ray节点/Shadowrocket节点/SSR/Clash免费节点订阅分享">VPN安卓 | 8月18日19.6M/S|免费V2ray节点/Shadowrocket节点/SSR/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-17-vpn-github.htm" title="VPN安卓 | 8月17日21.4M/S|免费SSR/Shadowrocket节点/Clash节点/V2ray免费节点订阅分享">VPN安卓 | 8月17日21.4M/S|免费SSR/Shadowrocket节点/Clash节点/V2ray免费节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -161,7 +161,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
