--- a/free-nodes/page-3.htm
+++ b/free-nodes/page-3.htm
@@ -111,6 +111,66 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-08">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-8-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 9月8日22.1M/S|免费VPN/Shadowrocket节点/Clash节点/V2ray节点/SSR免费节点订阅分享" src="/uploads/20241222-1/35f2ca1dcee5e084eaf1ccbd9a4339cc.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-8-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 9月8日22.1M/S|免费VPN/Shadowrocket节点/Clash节点/V2ray节点/SSR免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了美国、香港、日本、韩国、新加坡、加拿大、欧洲等地区,最高速度可达22.1 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-07">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-7-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 9月7日21.3M/S|免费VPN/Shadowrocket节点/V2ray节点/SSR/Clash免费节点订阅分享" src="/uploads/20241222-1/9e2b225d869222c8f450f1935366fea1.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-7-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 9月7日21.3M/S|免费VPN/Shadowrocket节点/V2ray节点/SSR/Clash免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了香港、欧洲、韩国、新加坡、日本、美国、加拿大等地区,最高速度可达21.3 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-06">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-6-top-vpn-node.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 9月6日20.4M/S|免费VPN/Clash节点/Shadowrocket节点/V2ray节点/SSR免费节点订阅分享" src="/uploads/20241222-1/82977253972095a20fc67c366bb8fa6d.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-6-top-vpn-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 9月6日20.4M/S|免费VPN/Clash节点/Shadowrocket节点/V2ray节点/SSR免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了香港、美国、加拿大、日本、欧洲、韩国、新加坡等地区,最高速度可达20.4 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-05">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-5-share-vpn.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 9月5日22.6M/S|免费VPN/SSR/Clash节点/Shadowrocket节点/V2ray免费节点订阅分享" src="/uploads/20241222-1/becabf2a83a60c5b8ca26e178386a903.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-5-share-vpn.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 9月5日22.6M/S|免费VPN/SSR/Clash节点/Shadowrocket节点/V2ray免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、美国、新加坡、香港、日本、韩国、欧洲等地区,最高速度可达22.6 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-09-04">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-9-4-free-vpn-node.htm" class="xcblog-blog-url">
@@ -201,66 +261,6 @@
                                     这一次的节点更新覆盖了美国、香港、加拿大、新加坡、韩国、欧洲、日本等地区,最高速度可达19.9 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-29">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-8-29-free-vpn.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 8月29日18.4M/S|免费VPN/SSR/Shadowrocket节点/V2ray节点/Clash免费节点订阅分享" src="/uploads/20241222-1/becabf2a83a60c5b8ca26e178386a903.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-8-29-free-vpn.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 8月29日18.4M/S|免费VPN/SSR/Shadowrocket节点/V2ray节点/Clash免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了加拿大、韩国、美国、欧洲、日本、香港、新加坡等地区,最高速度可达18.4 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-28">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-8-28-node-share.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 8月28日19.4M/S|免费VPN/Shadowrocket节点/Clash节点/SSR/V2ray免费节点订阅分享" src="/uploads/20241222-1/82977253972095a20fc67c366bb8fa6d.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-8-28-node-share.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 8月28日19.4M/S|免费VPN/Shadowrocket节点/Clash节点/SSR/V2ray免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了香港、欧洲、加拿大、韩国、日本、新加坡、美国等地区,最高速度可达19.4 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-27">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-8-27-share-vpn.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 8月27日22M/S|免费VPN/SSR/V2ray节点/Shadowrocket节点/Clash免费节点订阅分享" src="/uploads/20241222-1/905fd76560bc0b8e70a53175178cca6d.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-8-27-share-vpn.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 8月27日22M/S|免费VPN/SSR/V2ray节点/Shadowrocket节点/Clash免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了香港、加拿大、美国、新加坡、日本、韩国、欧洲等地区,最高速度可达22 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-26">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-8-26-node-share.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 8月26日18.9M/S|免费VPN/Shadowrocket节点/V2ray节点/Clash节点/SSR免费节点订阅分享" src="/uploads/20241222-1/5f167ecea9a0c5eda7bc8fa7798e5773.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-8-26-node-share.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 8月26日18.9M/S|免费VPN/Shadowrocket节点/V2ray节点/Clash节点/SSR免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了新加坡、日本、加拿大、欧洲、香港、美国、韩国等地区,最高速度可达18.9 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
                         
                         <ul class="pagination"><li><a href="/free-nodes/page-2.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="active"><span>3</span></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li> <li><a href="/free-nodes/page-4.htm">&raquo;</a></li></ul>                    </div>
                 </div>
@@ -271,16 +271,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-9-18-vpn-node.htm" title="VPN设备 | 9月18日22.5M/S|免费VPN/SSR/Clash节点/Shadowrocket节点/V2ray免费节点订阅分享">VPN设备 | 9月18日22.5M/S|免费VPN/SSR/Clash节点/Shadowrocket节点/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-12-top-vpn.htm" title="VPN设备 | 9月12日22.9M/S|免费VPN/Clash节点/SSR/V2ray节点/Shadowrocket免费节点订阅分享">VPN设备 | 9月12日22.9M/S|免费VPN/Clash节点/SSR/V2ray节点/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-1-free-vpn.htm" title="VPN设备 | 9月1日21.4M/S|免费VPN/Clash节点/SSR/V2ray节点/Shadowrocket免费节点订阅分享">VPN设备 | 9月1日21.4M/S|免费VPN/Clash节点/SSR/V2ray节点/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-28-vpn-node.htm" title="VPN设备 | 9月28日20M/S|免费VPN/V2ray节点/Clash节点/Singbox节点/SSR节点/Shadowrocket节点免费节点订阅分享">VPN设备 | 9月28日20M/S|免费VPN/V2ray节点/Clash节点/Singbox节点/SSR节点/Shadowrocket节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-13-vpn-github.htm" title="VPN设备 | 9月13日19.4M/S|免费VPN/SSR/V2ray节点/Shadowrocket节点/Clash免费节点订阅分享">VPN设备 | 9月13日19.4M/S|免费VPN/SSR/V2ray节点/Shadowrocket节点/Clash免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-7-vpn-free.htm" title="VPN安卓 | 8月7日21.1M/S|免费V2ray节点/Shadowrocket节点/SSR/Clash免费节点订阅分享">VPN安卓 | 8月7日21.1M/S|免费V2ray节点/Shadowrocket节点/SSR/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-12-top-vpn-node.htm" title="VPN安卓 | 8月12日20.5M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray免费节点订阅分享">VPN安卓 | 8月12日20.5M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-20-share-vpn.htm" title="VPN安卓 | 8月20日19.8M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR免费节点订阅分享">VPN安卓 | 8月20日19.8M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-24-node-share-links.htm" title="VPN设备 | 9月24日20.2M/S|免费VPN/Shadowrocket节点/Clash节点/V2ray节点/Singbox节点/SSR节点免费节点订阅分享">VPN设备 | 9月24日20.2M/S|免费VPN/Shadowrocket节点/Clash节点/V2ray节点/Singbox节点/SSR节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-28-node-share.htm" title="VPN设备 | 8月28日19.4M/S|免费VPN/Shadowrocket节点/Clash节点/SSR/V2ray免费节点订阅分享">VPN设备 | 8月28日19.4M/S|免费VPN/Shadowrocket节点/Clash节点/SSR/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-13-vpn-free.htm" title="VPN安卓 | 8月13日19.6M/S|免费SSR/V2ray节点/Clash节点/Shadowrocket免费节点订阅分享">VPN安卓 | 8月13日19.6M/S|免费SSR/V2ray节点/Clash节点/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-17-vpn-free.htm" title="VPN设备 | 9月17日22.2M/S|免费VPN/Shadowrocket节点/SSR/V2ray节点/Clash免费节点订阅分享">VPN设备 | 9月17日22.2M/S|免费VPN/Shadowrocket节点/SSR/V2ray节点/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-1-free-vpn.htm" title="VPN设备 | 9月1日21.4M/S|免费VPN/Clash节点/SSR/V2ray节点/Shadowrocket免费节点订阅分享">VPN设备 | 9月1日21.4M/S|免费VPN/Clash节点/SSR/V2ray节点/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-27-top-vpn-node.htm" title="VPN设备 | 9月27日19M/S|免费VPN/Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点免费节点订阅分享">VPN设备 | 9月27日19M/S|免费VPN/Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-16-top-vpn-node.htm" title="VPN设备 | 9月16日20.2M/S|免费VPN/SSR/V2ray节点/Shadowrocket节点/Clash免费节点订阅分享">VPN设备 | 9月16日20.2M/S|免费VPN/SSR/V2ray节点/Shadowrocket节点/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-5-share-vpn.htm" title="VPN设备 | 9月5日22.6M/S|免费VPN/SSR/Clash节点/Shadowrocket节点/V2ray免费节点订阅分享">VPN设备 | 9月5日22.6M/S|免费VPN/SSR/Clash节点/Shadowrocket节点/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-26-node-share-links.htm" title="VPN设备 | 9月26日20.9M/S|免费VPN/Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点免费节点订阅分享">VPN设备 | 9月26日20.9M/S|免费VPN/Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-25-top-vpn.htm" title="VPN设备 | 9月25日22.7M/S|免费VPN/SSR节点/Singbox节点/V2ray节点/Shadowrocket节点/Clash节点免费节点订阅分享">VPN设备 | 9月25日22.7M/S|免费VPN/SSR节点/Singbox节点/V2ray节点/Shadowrocket节点/Clash节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-21-vpn-proxy.htm" title="VPN设备 | 9月21日22.1M/S|免费VPN/Clash节点/SSR/V2ray节点/Shadowrocket免费节点订阅分享">VPN设备 | 9月21日22.1M/S|免费VPN/Clash节点/SSR/V2ray节点/Shadowrocket免费节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -292,7 +292,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
